<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_nav"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/navigation_workers"
        android:icon="@drawable/ic_workers_nav"
        android:title="@string/nav_workers" />

    <item
        android:id="@+id/navigation_sites"
        android:icon="@drawable/ic_sites_nav"
        android:title="@string/nav_sites" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/ic_credit_card_nav"
        android:title="@string/nav_payments" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_reports_nav"
        android:title="@string/nav_reports" />
</menu>
